--- a/src/pages/dashboard-page.css
+++ b/src/pages/dashboard-page.css
@@ -28,6 +28,15 @@
   color: #26355D;
 }
 
+.text-board-2 {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column;
+  font-size: 40px;
+  color: #26355D;
+}
+
 .button-container {
   width: 400px;
   max-width: 100%;
